# drone_demo

./: Dockerfile  Dockerfile_ros1  README.md  build.bash  cleanup.bash  entrypoint.sh  run.bash
drone_demo_system_tests/: CMakeLists.txt  README.md  package.xml
drone_demo_system_tests/src/system/: CMakeLists.txt  test_system_launch.py  test_system_yosemite_launch.py  tester_node.py
drone_demo_system_tests/waypoints/: waypoints.txt
drone_node/: CMakeLists.txt  package.xml
drone_node/include/drone_node/: drone_node.hpp
drone_node/include/utils/: geodetic_converter.hpp
drone_node/src/: drone_node.cpp  drone_node_main.cpp
drone_node/src/utils/: geodetic_converter.cpp
files/mavlink/: package.xml
ir_beacon/: CMakeLists.txt  package.xml
ir_beacon/cmake/: 99_ir_beacon_setup.sh.in
ir_beacon/ir_beacon_gazebo_pkg/: CMakeLists.txt  package.xml
ir_beacon/ir_beacon_gazebo_pkg/launch/: ir_beacon.launch.py
ir_beacon/ir_beacon_gazebo_pkg/models/ir_beacon/: model.sdf
ir_beacon/ir_beacon_gazebo_pkg/plugins/: CMakeLists.txt  IRSensorPlugin.cc  IRSensorPlugin.hh
ir_beacon/ir_beacon_gazebo_pkg/worlds/: iris_beacon.world
ir_beacon/ir_beacon_msgs/: CMakeLists.txt  package.xml
ir_beacon/ir_beacon_msgs/msg/: Targets.msg
ir_beacon/launch/: ir_beacon.launch
ir_beacon/models/ir_beacon/: model.config  model.sdf
ir_beacon/plugins/: CMakeLists.txt  IRSensorPlugin.cc  IRSensorPlugin.hh
ir_beacon/worlds/: iris_beacon.world
proposed_aerial_msgs/: CMakeLists.txt  package.xml
proposed_aerial_msgs/action/: SetFlightMode.action
proposed_aerial_msgs/msg/: AngularVelocity.msg  Attitude.msg  FlightMode.msg  GlobalPosition.msg  GlobalWaypoints.msg  LinearAcceleration.msg  MavlinkAnnotatedWaypoints.msg  MavlinkWaypointParameters.msg  OdometryWithAcceleration.msg  UpperTriangularCovariance.msg  UpperTriangularCovariance3.msg  VehicleStatus.msg
proposed_aerial_msgs/srv/: SetFlightMode.srv
px4/: CMakeLists.txt  package.xml
px4/cmake/: 99_px4_setup.sh.in
px4/config/: uorb_rtps_message_ids.patch  uorb_rtps_message_ids.yaml
qgroundcontrol/: CMakeLists.txt  package.xml
sitl_launcher/: CMakeLists.txt  README.md  package.xml
sitl_launcher/config/: odom_param.yaml.in  px4_serial_to_ros2_bridge_params.yaml  px4_serial_to_ros2_bridge_params.yaml.in  px4_serial_to_ros2_bridge_params2.yaml  run_px4-micrortps_client_and_ros2_bridge.bash.in
sitl_launcher/launch/: delta_demo.launch  demo.launch  demo.launch.py  mavros_link.launch  plane_demo.launch  run_px4.launch  sitl.launch
sitl_launcher/rviz/: rviz.rviz
sitl_launcher/scripts/: launch_drone  launch_drone_ros2.py  run_px4.sh
sitl_launcher/src/: drone_tf_broadcast.cpp
sitl_launcher/worlds/: roberts.world
