<?xml version="1.0"?>
<package format="2">
  <name>ir_beacon</name>
  <version>0.0.0</version>
  <description>The IR camera beacon detection package</description>
  
  <maintainer email="ichen@openrobotics.org">Ian Chen</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/sitl_launcher</url> -->
  <author email="ichen@openrobotics.org">Ian Chen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

  <depend>roscpp</depend>
  <depend>genmsg</depend>

</package>
