<?xml version="1.0"?>
<package format="2">
  <name>px4</name>
  <version>0.0.0</version>
  <description>The px4 package</description>

  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-numpy</buildtool_depend>
  <buildtool_depend>python-toml</buildtool_depend>
  <buildtool_depend>python-yaml</buildtool_depend>
  <buildtool_depend>unzip</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
