<?xml version="1.0"?>
<package format="2">
  <name>sitl_launcher</name>
  <version>0.0.0</version>
  <description>The sitl_launcher package</description>

  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/sitl_launcher</url> -->
  <author email="tfoote@openrobotics.org">Tully Foote</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
