<?xml version="1.0"?>
<package format="2">
  <name>ir_beacon_gazebo_pkg</name>
  <version>0.0.0</version>
  <description>The IR camera beacon detection package</description>

  <maintainer email="ichen@openrobotics.org">Ian Chen</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/sitl_launcher</url> -->
  <author email="ichen@openrobotics.org">Ian Chen</author>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <depend>ir_beacon_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/>
  </export>

</package>
