<package format="3">
  <name>ir_beacon_msgs</name>
  <version>0.0.1</version>
  <description>
    The ir_beacon_msgs package
  </description>
  <author email="tfoote@openrobotics.com">Tully Foote</author>
  <author email="alejandro@openrobotics.com">Alejandro Hernandez</author>

  <maintainer email="tfoote@openrobotics.com">Tully Foote</maintainer>
  <maintainer email="alejandro@openrobotics.com">Alejandro Hernandez</maintainer>

  <license>Apache2</license>
  <url type="website">https://wiki.ros.org/ng_drones</url>
  <url type="bugtracker">https://github.com/osrf/drone_demo/issues</url>
  <url type="repository">https://github.com/osrf/drone_demo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
